tests: setup module path for configurations with explicitly chosen module (IDEA-171419)
GitOrigin-RevId: fd61e1c4dd2e1fbf742f30aec217e839d1d2eec0